GamePlan/main/default/objects/Requirements_Object__c/Requirements_Object__c.object-meta.xml
<CustomObject>
	<label>Requirements Object</label>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Requirements Objects</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>