GamePlan/main/default/objects/Requirements_Object__c/fields/Contact__c.field-meta.xml
<CustomField>
	<fullName>Contact__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Contact</label>
	<referenceTo>Contact</referenceTo>
	<relationshipLabel>Requirements Objects</relationshipLabel>
	<relationshipName>Requirements_Objects</relationshipName>
	<type>Lookup</type>
</CustomField>