GamePlan/main/default/objects/Requirements_Object__c/fields/Importance__c.field-meta.xml
<CustomField>
	<fullName>Importance__c</fullName>
	<label>Importance</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>High</fullName>
			</value>
			<value>
				<fullName>Medium</fullName>
			</value>
			<value>
				<fullName>Low</fullName>
			</value>
			<value>
				<fullName>Unknown</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>