GamePlan/main/default/objects/Requirements_Object__c/fields/Mission_Critical__c.field-meta.xml
<CustomField>
	<fullName>Mission_Critical__c</fullName>
	<defaultValue>true</defaultValue>
	<label>Mission Critical</label>
	<type>Checkbox</type>
</CustomField>