GamePlan/main/default/objects/Requirements_Object__c/fields/Opportunity__c.field-meta.xml
<CustomField>
	<fullName>Opportunity__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Opportunity</label>
	<referenceTo>Opportunity</referenceTo>
	<relationshipName>Influence_Objects</relationshipName>
	<type>Lookup</type>
</CustomField>