GamePlan/main/default/objects/Requirements_Object__c/fields/Requirements_Object__c.field-meta.xml
<CustomField>
	<fullName>Requirements_Object__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Requirements Object</label>
	<referenceTo>Requirements_Object__c</referenceTo>
	<relationshipLabel>Requirements Objects</relationshipLabel>
	<relationshipName>Requirements_Objects</relationshipName>
	<type>Lookup</type>
</CustomField>